--- a/index.html
+++ b/index.html
@@ -3,84 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Input Laporan Keuangan</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 400px;
-      margin: 40px auto;
-      background: #f7f9fc;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    h2 { text-align: center; color: #1976d2; }
-    label { display: block; margin-top: 10px; font-weight: bold; }
-    input, select, textarea, button {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
-    button {
-      background: #1976d2;
-      color: white;
-      border: none;
-      cursor: pointer;
-      margin-top: 15px;
-      font-size: 16px;
-      border-radius: 5px;
-      padding: 10px;
-    }
-    button:hover { background: #0d47a1; }
-    #status { text-align: center; margin-top: 15px; font-weight: bold; }
-  </style>
+  <title>Laporan Keuangan (Bootstrap 5)</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h2>Laporan Keuangan</h2>
-  <form id="keuanganForm">
-    <label for="Tanggal">Tanggal</label>
-    <input type="date" id="Tanggal" required>
+<body class="bg-light">
+  <div class="container mt-5">
+    <div class="card shadow p-4">
+      <h2 class="text-center text-primary mb-4">Laporan Keuangan</h2>
+      <form id="keuanganForm">
+        <div class="mb-3">
+          <label for="Tanggal" class="form-label">Tanggal</label>
+          <input type="date" class="form-control" id="Tanggal" required>
+        </div>
 
-    <label for="Keperluan">Keperluan</label>
-    <textarea id="Keperluan" rows="3" required></textarea>
+        <div class="mb-3">
+          <label for="Keperluan" class="form-label">Keperluan</label>
+          <textarea class="form-control" id="Keperluan" rows="3" required></textarea>
+        </div>
 
-    <label for="Jenis">Jenis</label>
-    <select id="Jenis" required>
-      <option value="Mandiri">Mandiri</option>
-      <option value="CIMB">CIMB</option>
-      <option value="Dompet">Dompet</option>
-      <option value="Rumah">Rumah</option>
-    </select>
+        <div class="mb-3">
+          <label for="Jenis" class="form-label">Jenis</label>
+          <select class="form-select" id="Jenis" required>
+            <option value="Mandiri">Mandiri</option>
+            <option value="CIMB">CIMB</option>
+            <option value="Dompet">Dompet</option>
+            <option value="Rumah">Rumah</option>
+          </select>
+        </div>
 
-    <label for="Tipe">Tipe</label>
-    <select id="Tipe" required>
-      <option value="+">+</option>
-      <option value="-">-</option>
-    </select>
+        <div class="mb-3">
+          <label for="Tipe" class="form-label">Tipe</label>
+          <select class="form-select" id="Tipe" required>
+            <option value="+">+</option>
+            <option value="-">-</option>
+          </select>
+        </div>
 
-    <label for="Kategori">Kategori</label>
-    <select id="Kategori" required>
-      <option value="Kebutuhan">Kebutuhan</option>
-      <option value="Keinginan">Keinginan</option>
-    </select>
+        <div class="mb-3">
+          <label for="Kategori" class="form-label">Kategori</label>
+          <select class="form-select" id="Kategori" required>
+            <option value="Kebutuhan">Kebutuhan</option>
+            <option value="Keinginan">Keinginan</option>
+          </select>
+        </div>
 
-    <label for="Jumlah">Jumlah (Rp)</label>
-    <input type="number" id="Jumlah" required>
+        <div class="mb-3">
+          <label for="Jumlah" class="form-label">Jumlah (Rp)</label>
+          <input type="number" class="form-control" id="Jumlah" required>
+        </div>
 
-    <button type="submit">Kirim</button>
-  </form>
+        <button type="submit" class="btn btn-primary w-100">Kirim</button>
+      </form>
 
-  <p id="status"></p>
+      <p id="status" class="text-center mt-3 fw-bold"></p>
+    </div>
+  </div>
 
   <script>
     const scriptURL = "https://script.google.com/macros/s/AKfycbwBLNP_-uc3rhgMg1CbvNIzvYEtHwSIyJH095_C4yVrmCrsOYdBlTmM5zzfsV34D-YN/exec";
 
     document.getElementById("keuanganForm").addEventListener("submit", e => {
       e.preventDefault();
-      document.getElementById("status").innerText = "Mengirim data... ⏳";
+      const status = document.getElementById("status");
+      status.textContent = "Mengirim data... ⏳";
 
       const data = {
         Tanggal: document.getElementById("Tanggal").value,
@@ -91,22 +76,16 @@
         Jumlah: document.getElementById("Jumlah").value
       };
 
-      fetch(scriptURL, {
-        method: "POST",
-        body: JSON.stringify(data)
-      })
-      .then(res => {
-        if (res.ok) {
-          document.getElementById("status").innerText = "✅ Data berhasil dikirim!";
-          document.getElementById("keuanganForm").reset();
-        } else {
-          document.getElementById("status").innerText = "❌ Gagal mengirim data.";
-        }
-      })
-      .catch(err => {
-        document.getElementById("status").innerText = "⚠️ Terjadi kesalahan koneksi.";
-        console.error(err);
-      });
+      fetch(scriptURL, { method: "POST", body: JSON.stringify(data) })
+        .then(res => {
+          if (res.ok) {
+            status.textContent = "✅ Data berhasil dikirim!";
+            e.target.reset();
+          } else {
+            status.textContent = "❌ Gagal mengirim data.";
+          }
+        })
+        .catch(() => status.textContent = "⚠️ Terjadi kesalahan koneksi.");
     });
   </script>
 </body>
