--- a/index.html
+++ b/index.html
@@ -3,26 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laporan Keuangan (Tailwind)</title>
+  <title>Laporan Keuangan</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white p-8 rounded-2xl shadow-lg w-full max-w-md">
-    <h2 class="text-2xl font-semibold text-center text-blue-600 mb-6">Laporan Keuangan</h2>
+<body class="bg-gradient-to-br from-blue-100 to-slate-200 flex items-center justify-center min-h-screen px-4">
+  <div class="bg-white/90 backdrop-blur-md p-6 sm:p-8 rounded-2xl shadow-xl w-full max-w-md border border-slate-200">
+    <!-- Header -->
+    <h2 class="text-3xl font-bold text-center text-blue-700 mb-2">📘 Laporan Keuangan</h2>
+    <p class="text-center text-gray-500 text-sm mb-6">Catat transaksi dengan mudah dan cepat</p>
+
+    <!-- Form -->
     <form id="keuanganForm" class="space-y-4">
       <div>
-        <label for="Tanggal" class="block font-medium">Tanggal</label>
-        <input type="date" id="Tanggal" required class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 outline-none">
+        <label for="Tanggal" class="block font-medium text-gray-700">Tanggal</label>
+        <input type="date" id="Tanggal" required
+          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
       </div>
 
       <div>
-        <label for="Keperluan" class="block font-medium">Keperluan</label>
-        <textarea id="Keperluan" rows="3" required class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 outline-none"></textarea>
+        <label for="Keperluan" class="block font-medium text-gray-700">Keperluan</label>
+        <textarea id="Keperluan" rows="3" required
+          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
+          placeholder="Contoh: Beli bahan solder, bayar listrik..."></textarea>
       </div>
 
       <div>
-        <label for="Jenis" class="block font-medium">Jenis</label>
-        <select id="Jenis" required class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 outline-none">
+        <label for="Jenis" class="block font-medium text-gray-700">Jenis</label>
+        <select id="Jenis" required
+          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
           <option value="Mandiri">Mandiri</option>
           <option value="CIMB">CIMB</option>
           <option value="Dompet">Dompet</option>
@@ -32,15 +40,18 @@
 
       <div class="grid grid-cols-2 gap-4">
         <div>
-          <label for="Tipe" class="block font-medium">Tipe</label>
-          <select id="Tipe" required class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 outline-none">
+          <label for="Tipe" class="block font-medium text-gray-700">Tipe</label>
+          <select id="Tipe" required
+            class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
             <option value="+">+</option>
             <option value="-">-</option>
           </select>
         </div>
+
         <div>
-          <label for="Kategori" class="block font-medium">Kategori</label>
-          <select id="Kategori" required class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 outline-none">
+          <label for="Kategori" class="block font-medium text-gray-700">Kategori</label>
+          <select id="Kategori" required
+            class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
             <option value="Kebutuhan">Kebutuhan</option>
             <option value="Keinginan">Keinginan</option>
           </select>
@@ -48,25 +59,28 @@
       </div>
 
       <div>
-        <label for="Jumlah" class="block font-medium">Jumlah (Rp)</label>
-        <input type="number" id="Jumlah" required class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 outline-none">
+        <label for="Jumlah" class="block font-medium text-gray-700">Jumlah (Rp)</label>
+        <input type="number" id="Jumlah" required placeholder="Contoh: 150000"
+          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
       </div>
 
-      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition">
-        Kirim
+      <button type="submit"
+        class="w-full bg-blue-600 hover:bg-blue-700 active:bg-blue-800 text-white font-semibold py-2.5 rounded-lg shadow-md transition transform hover:scale-[1.01]">
+        Kirim Data 💾
       </button>
     </form>
 
-    <p id="status" class="text-center font-semibold mt-4"></p>
+    <p id="status" class="text-center font-semibold mt-4 text-gray-600"></p>
   </div>
 
   <script>
     const scriptURL = "https://script.google.com/macros/s/AKfycbwBLNP_-uc3rhgMg1CbvNIzvYEtHwSIyJH095_C4yVrmCrsOYdBlTmM5zzfsV34D-YN/exec";
 
-    document.getElementById("keuanganForm").addEventListener("submit", e => {
+    document.getElementById("keuanganForm").addEventListener("submit", async e => {
       e.preventDefault();
       const status = document.getElementById("status");
-      status.textContent = "Mengirim data... ⏳";
+      status.textContent = "⏳ Mengirim data...";
+      status.className = "text-center font-semibold mt-4 text-blue-600";
 
       const data = {
         Tanggal: document.getElementById("Tanggal").value,
@@ -77,16 +91,19 @@
         Jumlah: document.getElementById("Jumlah").value
       };
 
-      fetch(scriptURL, { method: "POST", body: JSON.stringify(data) })
-        .then(res => {
-          if (res.ok) {
-            status.textContent = "✅ Data berhasil dikirim!";
-            e.target.reset();
-          } else {
-            status.textContent = "❌ Gagal mengirim data.";
-          }
-        })
-        .catch(() => status.textContent = "⚠️ Terjadi kesalahan koneksi.");
+      try {
+        const res = await fetch(scriptURL, { method: "POST", body: JSON.stringify(data) });
+        if (res.ok) {
+          status.textContent = "✅ Data berhasil dikirim!"
+          status.className = "text-center font-semibold mt-4 text-green-600";
+          e.target.reset();
+        } else {
+          throw new Error();
+        }
+      } catch {
+        status.textContent = "⚠️ Gagal mengirim data. Coba lagi.";
+        status.className = "text-center font-semibold mt-4 text-red-600";
+      }
     });
   </script>
 </body>
