--- a/index.html
+++ b/index.html
@@ -1,110 +1,243 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laporan Keuangan</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Laporan Keuangan — Smart Finance</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <style>
+    :root{
+      --bg-gradient: linear-gradient(135deg,#bfe6ff 0%, #d9f1ff 40%, #e9dbff 100%);
+      --glass-border: rgba(255,255,255,0.35);
+      --accent-1: #4facfe;
+      --accent-2: #00f2fe;
+      --text-dark: #08203a;
+      --muted: #5b6b78;
+      --radius: 16px;
+      --card-w: 420px;
+    }
+    html,body{height:100%;margin:0}
+    body{
+      font-family:"Poppins",system-ui;
+      background:var(--bg-gradient);
+      display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
+      padding:18px;
+    }
+    .card{
+      width:100%;max-width:var(--card-w);
+      border-radius:var(--radius);
+      padding:22px;
+      background:linear-gradient(180deg,rgba(255,255,255,0.45),rgba(255,255,255,0.12));
+      backdrop-filter:blur(10px) saturate(130%);
+      border:1px solid var(--glass-border);
+      box-shadow:0 12px 40px rgba(12,30,50,0.12);
+      box-sizing:border-box;
+    }
+    .title{font-size:20px;font-weight:700;text-align:center;color:var(--text-dark);}
+    .subtitle{text-align:center;color:var(--muted);font-size:13px;margin-bottom:16px;}
+    form label{display:block;font-size:13px;font-weight:600;color:var(--text-dark);margin-bottom:6px}
+    .field{margin-bottom:10px}
+    input,select,textarea{
+      width:100%;padding:10px 12px;border-radius:12px;
+      border:1px solid rgba(10,20,30,0.06);
+      background:rgba(255,255,255,0.7);
+      font-size:15px;box-sizing:border-box;
+    }
+    textarea{min-height:78px;resize:vertical}
+    .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+    .btn{
+      width:100%;padding:12px 14px;border:none;border-radius:12px;
+      font-weight:700;color:white;font-size:15px;
+      background:linear-gradient(90deg,var(--accent-1),var(--accent-2));
+      box-shadow:0 8px 24px rgba(79,172,254,0.2);cursor:pointer;
+      margin-top:8px;
+    }
+    .btn.alt{background:linear-gradient(90deg,#ec4899,#f87171);}
+    .status{text-align:center;font-weight:600;margin-top:10px;color:var(--muted)}
+    #chartContainer{display:none;margin-top:20px;width:100%;max-width:420px}
+    canvas{width:100%!important;height:auto!important;margin-top:12px;background:white;border-radius:16px;padding:10px;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
+  </style>
 </head>
-<body class="bg-gradient-to-br from-blue-100 to-slate-200 flex items-center justify-center min-h-screen px-4">
-  <div class="bg-white/90 backdrop-blur-md p-6 sm:p-8 rounded-2xl shadow-xl w-full max-w-md border border-slate-200">
-    <!-- Header -->
-    <h2 class="text-3xl font-bold text-center text-blue-700 mb-2">📘 Laporan Keuangan</h2>
-    <p class="text-center text-gray-500 text-sm mb-6">Catat transaksi dengan mudah dan cepat</p>
+<body>
+  <main class="card">
+    <h1 class="title">Laporan Keuangan</h1>
+    <p class="subtitle">Catat transaksi pribadi & pantau grafik</p>
 
-    <!-- Form -->
-    <form id="keuanganForm" class="space-y-4">
-      <div>
-        <label for="Tanggal" class="block font-medium text-gray-700">Tanggal</label>
-        <input type="date" id="Tanggal" required
-          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
+    <form id="keuanganForm">
+      <div class="field">
+        <label for="Tanggal">Tanggal</label>
+        <input id="Tanggal" type="date" required />
       </div>
-
-      <div>
-        <label for="Keperluan" class="block font-medium text-gray-700">Keperluan</label>
-        <textarea id="Keperluan" rows="3" required
-          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition"
-          placeholder="Contoh: Beli bahan solder, bayar listrik..."></textarea>
+      <div class="field">
+        <label for="Keperluan">Keperluan</label>
+        <textarea id="Keperluan" required></textarea>
       </div>
-
-      <div>
-        <label for="Jenis" class="block font-medium text-gray-700">Jenis</label>
-        <select id="Jenis" required
-          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
+      <div class="field">
+        <label for="Jenis">Jenis</label>
+        <select id="Jenis" required>
           <option value="Mandiri">Mandiri</option>
           <option value="CIMB">CIMB</option>
           <option value="Dompet">Dompet</option>
           <option value="Rumah">Rumah</option>
         </select>
       </div>
-
-      <div class="grid grid-cols-2 gap-4">
-        <div>
-          <label for="Tipe" class="block font-medium text-gray-700">Tipe</label>
-          <select id="Tipe" required
-            class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
+      <div class="grid-2">
+        <div class="field">
+          <label for="Tipe">Tipe</label>
+          <select id="Tipe" required>
             <option value="+">+</option>
             <option value="-">-</option>
           </select>
         </div>
-
-        <div>
-          <label for="Kategori" class="block font-medium text-gray-700">Kategori</label>
-          <select id="Kategori" required
-            class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
-            <option value="Kebutuhan">Kebutuhan</option>
-            <option value="Keinginan">Keinginan</option>
-          </select>
+        <div class="field">
+          <label for="Kategori">Kategori</label>
+          <select id="Kategori" required></select>
         </div>
       </div>
-
-      <div>
-        <label for="Jumlah" class="block font-medium text-gray-700">Jumlah (Rp)</label>
-        <input type="number" id="Jumlah" required placeholder="Contoh: 150000"
-          class="w-full border border-gray-300 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition">
+      <div class="field">
+        <label for="Jumlah">Jumlah (Rp)</label>
+        <input id="Jumlah" type="number" required />
       </div>
-
-      <button type="submit"
-        class="w-full bg-blue-600 hover:bg-blue-700 active:bg-blue-800 text-white font-semibold py-2.5 rounded-lg shadow-md transition transform hover:scale-[1.01]">
-        Kirim Data 💾
-      </button>
+      <button type="submit" class="btn">Kirim Data 💾</button>
     </form>
 
-    <p id="status" class="text-center font-semibold mt-4 text-gray-600"></p>
+    <button id="showChart" class="btn alt">Tampilkan Semua Grafik 📊</button>
+    <div id="status" class="status"></div>
+  </main>
+
+  <div id="chartContainer">
+    <canvas id="chartPengeluaran"></canvas>
+    <canvas id="chartPemasukan"></canvas>
+    <canvas id="chartRasio"></canvas>
   </div>
 
-  <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbwBLNP_-uc3rhgMg1CbvNIzvYEtHwSIyJH095_C4yVrmCrsOYdBlTmM5zzfsV34D-YN/exec";
+<script>
+const scriptURL = "https://script.google.com/macros/s/AKfycbxRRwwWLAzfiWPe-wfhWdieBK5XRQdTLnPO2dyUIdtjPdljtQ7k1NNV51u3lsJCpS8/exec";
 
-    document.getElementById("keuanganForm").addEventListener("submit", async e => {
-      e.preventDefault();
-      const status = document.getElementById("status");
-      status.textContent = "⏳ Mengirim data...";
-      status.className = "text-center font-semibold mt-4 text-blue-600";
+const form = document.getElementById('keuanganForm');
+const tipeEl = document.getElementById('Tipe');
+const kategoriEl = document.getElementById('Kategori');
+const statusEl = document.getElementById('status');
+const chartContainer = document.getElementById('chartContainer');
 
-      const data = {
-        Tanggal: document.getElementById("Tanggal").value,
-        Keperluan: document.getElementById("Keperluan").value,
-        Jenis: document.getElementById("Jenis").value,
-        Tipe: document.getElementById("Tipe").value,
-        Kategori: document.getElementById("Kategori").value,
-        Jumlah: document.getElementById("Jumlah").value
-      };
+let charts = [];
 
-      try {
-        const res = await fetch(scriptURL, { method: "POST", body: JSON.stringify(data) });
-        if (res.ok) {
-          status.textContent = "✅ Data berhasil dikirim!"
-          status.className = "text-center font-semibold mt-4 text-green-600";
-          e.target.reset();
-        } else {
-          throw new Error();
-        }
-      } catch {
-        status.textContent = "⚠️ Gagal mengirim data. Coba lagi.";
-        status.className = "text-center font-semibold mt-4 text-red-600";
-      }
-    });
-  </script>
+const kategoriMap = {
+  "+": ["Gaji", "Ortu", "Lutfi", "Tarik tunai", "Transfer"],
+  "-": ["Kebutuhan", "Keinginan"]
+};
+
+// isi awal dropdown kategori
+function refreshKategori() {
+  const selected = tipeEl.value;
+  kategoriEl.innerHTML = "";
+  kategoriMap[selected].forEach(item=>{
+    const opt=document.createElement("option");
+    opt.value=item;opt.textContent=item;kategoriEl.appendChild(opt);
+  });
+}
+tipeEl.addEventListener("change",refreshKategori);
+refreshKategori();
+
+// kirim data
+form.addEventListener("submit",async(e)=>{
+  e.preventDefault();
+  statusEl.textContent="⏳ Mengirim data...";
+  const payload={
+    Tanggal:document.getElementById("Tanggal").value,
+    Keperluan:document.getElementById("Keperluan").value.trim(),
+    Jenis:document.getElementById("Jenis").value,
+    Tipe:document.getElementById("Tipe").value,
+    Kategori:document.getElementById("Kategori").value,
+    Jumlah:document.getElementById("Jumlah").value
+  };
+  try{
+    const res=await fetch(scriptURL,{method:"POST",body:JSON.stringify(payload)});
+    if(res.ok){
+      statusEl.textContent="✅ Data berhasil dikirim!";
+      statusEl.style.color="#16a34a";
+      form.reset();
+      refreshKategori();
+    }else throw new Error();
+  }catch{
+    statusEl.textContent="❌ Gagal mengirim data.";
+    statusEl.style.color="#b91c1c";
+  }
+});
+
+// tampilkan grafik
+document.getElementById('showChart').addEventListener('click', async ()=>{
+  statusEl.textContent="📊 Memuat grafik...";
+  chartContainer.style.display='block';
+
+  try{
+    const res = await fetch(scriptURL + '?action=getData');
+    const data = await res.json();
+
+    // ===== PENGELUARAN =====
+    const kebutuhan = data.filter(d=>d.Tipe==='-' && d.Kategori==='Kebutuhan')
+      .reduce((a,b)=>a+Number(b.Jumlah||0),0);
+    const keinginan = data.filter(d=>d.Tipe==='-' && d.Kategori==='Keinginan')
+      .reduce((a,b)=>a+Number(b.Jumlah||0),0);
+    const totalKeluar=kebutuhan+keinginan;
+
+    // ===== PEMASUKAN =====
+    const sumber=["Gaji","Ortu","Lutfi","Tarik tunai", "Transfer"];
+    const masukVal=sumber.map(k=>data.filter(d=>d.Tipe==='+'&&d.Kategori===k)
+      .reduce((a,b)=>a+Number(b.Jumlah||0),0));
+    const totalMasuk=masukVal.reduce((a,b)=>a+b,0);
+
+    // ===== RASIO MASUK : KELUAR =====
+    const totalAll=totalMasuk+totalKeluar;
+
+    // hapus grafik lama
+    charts.forEach(c=>c.destroy());
+    charts=[];
+
+    const ctx1=document.getElementById('chartPengeluaran').getContext('2d');
+    charts.push(new Chart(ctx1,{
+      type:'pie',
+      data:{
+        labels:[`Kebutuhan (${((kebutuhan/totalKeluar)*100||0).toFixed(1)}%)`,
+                `Keinginan (${((keinginan/totalKeluar)*100||0).toFixed(1)}%)`],
+        datasets:[{data:[kebutuhan,keinginan],backgroundColor:['#3b82f6','#f97316']}]
+      },
+      options:{plugins:{title:{display:true,text:'Pengeluaran (-)'}}}
+    }));
+
+    const ctx2=document.getElementById('chartPemasukan').getContext('2d');
+    charts.push(new Chart(ctx2,{
+      type:'pie',
+      data:{
+        labels:sumber.map((s,i)=>`${s} (${((masukVal[i]/totalMasuk)*100||0).toFixed(1)}%)`),
+        datasets:[{data:masukVal,backgroundColor:['#10b981','#06b6d4','#6366f1','#facc15']}]
+      },
+      options:{plugins:{title:{display:true,text:'Pemasukan (+)'}}}
+    }));
+
+    const ctx3=document.getElementById('chartRasio').getContext('2d');
+    charts.push(new Chart(ctx3,{
+      type:'pie',
+      data:{
+        labels:[
+          `Pemasukan (${((totalMasuk/totalAll)*100||0).toFixed(1)}%)`,
+          `Pengeluaran (${((totalKeluar/totalAll)*100||0).toFixed(1)}%)`
+        ],
+        datasets:[{data:[totalMasuk,totalKeluar],backgroundColor:['#16a34a','#dc2626']}]
+      },
+      options:{plugins:{title:{display:true,text:'Rasio Pemasukan vs Pengeluaran'}}}
+    }));
+
+    statusEl.textContent="✅ Semua grafik berhasil dimuat!";
+    statusEl.style.color="#16a34a";
+  }catch(err){
+    statusEl.textContent="⚠️ Gagal memuat grafik.";
+    statusEl.style.color="#b91c1c";
+  }
+});
+</script>
 </body>
 </html>
