--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Laporan Keuangan — Smart Finance</title>
+  <title>Laporan Keuangan Pribadi</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -64,7 +64,7 @@
 <body>
   <main class="card">
     <h1 class="title">Laporan Keuangan</h1>
-    <p class="subtitle">Catat transaksi pribadi & pantau grafik</p>
+    <p class="subtitle">Catat transaksi pribadi dengan cepat</p>
 
     <form id="keuanganForm">
       <div class="field">
