--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+#Update
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -272,3 +274,4 @@ async function loadCharts(bulan = null) {
 </script>
 </body>
 </html>
+
